Traefik-v2-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:2.1.1
        name: traefik-ingress
        resources:
        readinessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: "traefik"
          containerPort: 9000
          hostPort: 9000
        - name: "web"
          containerPort: 80
          hostPort: 80
        - name: "websecure"
          containerPort: 443
          hostPort: 443
        args:
          - "--global.checknewversion=true"
          - "--global.sendanonymoususage=true"
          - "--entryPoints.traefik.address=:9000"
          - "--entryPoints.web.address=:80"
          - "--entryPoints.websecure.address=:443"
          - "--api=true"
          - "--api.dashboard=true"
          - "--ping=true"
          - "--providers.kubernetesingress"
          - "--providers.kubernetescrd"
          - "--log.level=INFO"
          - "--accesslog"
          # - "--providers.kubernetesCRD.namespaces=[]"
      nodeSelector:
        lb: traefik
