Traefik-v2-yaml/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  labels:
    app: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
    release: traefik-ingress
  ports:
  - port: 80
    name: web
    targetPort: "web"
  - port: 443
    name: websecure
    targetPort: "websecure"
